--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "@deskthing/types",
-  "version": "0.10.6",
+  "version": "0.10.7",
+  "description": "TypeScript types and interfaces for DeskThing",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "description": "The global types for DeskThing",
+  "files": [
+    "dist"
+  ],
+  "sideEffects": false,
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build",
-    "watch": "tsc -w"
+    "prepare": "npm run build"
   },
-  "type": "module",
   "keywords": [
     "Types",
     "DeskThing",
-    "DeskThing",
-    "Types"
+    "TypeScript"
   ],
   "homepage": "https://github.com/itsriprod/deskthing-types#readme",
   "bugs": {
@@ -27,7 +28,9 @@
   "license": "ISC",
   "author": "Riprod",
   "devDependencies": {
-    "@types/node": "^22.13.1",
-    "typescript": "^5.7.3"
+    "typescript": "^4.9.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
