--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "ISC",
   "author": "Riprod",
   "devDependencies": {
+    "@types/node": "^24.5.0",
     "typescript": "^5.8.2"
   },
   "publishConfig": {
